recipes/llama-3-70b/vllm/agg/gaie/http-route.yaml
# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama3-70b-agg-route
spec:
  hostnames:
    - llama3-70b-agg.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: llama3-70b-agg-pool
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
